cicd pip install fix

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,7 +21,7 @@ jobs:
 
       - name: Install dependencies and create ZIP file
         run: |
-          pip install boto3 Pillow
+          pip install Pillow -t ./src
           cd src
           zip -r ../deployment_package.zip .
 
